Исправляю последний коммент ревьюера связанный с input

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@ html {
   justify-content: center;
   align-items: center;
   margin: auto;
+  color: #fff;
   background-color: #1b1919;
   inline-size: 1200px;
   block-size: 100%;
